--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -69,11 +69,11 @@
     }
 
     function loadHTML(fileName) {
-        try{
-            event.preventDefault();
-        } catch {
-            console.log('event não suportado!');
-        }
+        // try{
+        //     event.preventDefault();
+        // } catch {
+        //     console.log('event não suportado!');
+        // }
 
 
         $('#manual').html('loading...');
