--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -57,45 +57,45 @@
     let nav; //usado na navegação pelas ancoras
 
 
-    function handler() {
-        if (this.readyState === 4 & this.status == 200) {
-            if (this.status === 200){
-                $('#manual').html(this.responseText);
-                $('#manual').animate({ 'opacity': '1' }, 1000)
-            } else return false
-        } else if (this.readyState == 4 & this.status != 200) {
-            return false //página não encontrada ou erro na conexão
-        }
-    }
+    // function handler() {
+    //     if (this.readyState === 4 & this.status == 200) {
+    //         if (this.status === 200){
+    //             $('#manual').html(this.responseText)
+    //                 .animate({ 'opacity': '1' }, 1000);
+    //         } else return false
+    //     } else if (this.readyState == 4 & this.status != 200) {
+    //         return false //página não encontrada ou erro na conexão
+    //     }
+    // }
 
     function loadHTML(fileName) {
-        // try{
-        //     event.preventDefault();
-        // } catch {
-        //     console.log('event não suportado!');
-        // }
+        try{
+            event.preventDefault();
+        } catch (err){
+        console.log('event não suportado!');
+        }    
+        
 
 
-        $('#manual').html('loading...');
-        $('#manual').animate({ 'opacity': '0' }, 0)        
-        const xml = new XMLHttpRequest();
-        xml.onreadystatechange = handler;
-        xml.open('GET', `./html/${fileName}`, false);
-        xml.send();
+        // $('#manual').html('loading...');
+        // $('#manual').animate({ 'opacity': '0' }, 0)        
+        // const xml = new XMLHttpRequest();
+        // xml.onreadystatechange = handler;
+        // xml.open('GET', `./html/${fileName}`, false);
+        // xml.send();
 
-        // $.ajax({
-        //     url: `./html/${fileName}`,
-        //     cache: false,
-        //     beforeSend: () => {
-        //         $('#manual').html('loading...');
-        //         $('#manual').animate({ 'opacity': '0' }, 0)
-        //     },
-        //     success: (html => {
-        //         $('#manual').html(html);
-        //         $('#manual').show(500);
-        //         $('#manual').animate({ 'opacity': '1' }, 1000)
-        //     })
-        // });
+        $.ajax({
+            url: `./html/${fileName}`,
+            cache: false,
+            beforeSend: () => {
+                $('#manual').html('loading...');
+            },
+            success: (html => {
+                $('#manual').animate({ 'opacity': '0' }, 0)
+                    .html(html)
+                    .animate({ 'opacity': '1' }, 1000);
+            })
+        });
     }
 
 
