--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,6 +13,11 @@
 </head>
 
 <body class="dragscroll">
+
+    <div id="loader">
+            <img class="loader" src="/images/loader2.gif" alt="load">
+    </div>
+
     <div class="container-menu">
         <aside class="menuItens">
             <div>Selecione o equipamento</div>
@@ -21,7 +26,7 @@
             <a class="menuItem" href="#" onclick="loadHTML('_connect.html')">Obdmap Connect</a>
         </aside>
         <div class="manual" id="manual">
-
+            
         </div>
     </div>
 
@@ -56,45 +61,30 @@
     let s = ''; //usado para auxialiar as ancoras
     let nav; //usado na navegação pelas ancoras
 
-
-    // function handler() {
-    //     if (this.readyState === 4 & this.status == 200) {
-    //         if (this.status === 200){
-    //             $('#manual').html(this.responseText)
-    //                 .animate({ 'opacity': '1' }, 1000);
-    //         } else return false
-    //     } else if (this.readyState == 4 & this.status != 200) {
-    //         return false //página não encontrada ou erro na conexão
-    //     }
-    // }
-
     function loadHTML(fileName) {
         try{
             event.preventDefault();
         } catch (err){
-        console.log('event não suportado!');
+            console.log('event não suportado!');
         }    
-        
-
-
-        // $('#manual').html('loading...');
-        // $('#manual').animate({ 'opacity': '0' }, 0)        
-        // const xml = new XMLHttpRequest();
-        // xml.onreadystatechange = handler;
-        // xml.open('GET', `./html/${fileName}`, false);
-        // xml.send();
 
         $.ajax({
             url: `./html/${fileName}`,
             cache: false,
             beforeSend: () => {
                 $('#manual').html('loading...');
+                $('#loader').css('display', 'flex');
             },
             success: (html => {
                 $('#manual').animate({ 'opacity': '0' }, 0)
                     .html(html)
                     .animate({ 'opacity': '1' }, 1000);
+            }),
+            complete: ( s => {
+                console.log(s);
+                $('#loader').css('display', 'none');
             })
+            
         });
     }
 
