--- a/src/public/css/index/container.css
+++ b/src/public/css/index/container.css
@@ -8,4 +8,22 @@
   height: 100%;
 }
 
+#loader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 1px;
+  right: 1px;
+  opacity: 50%;
+  background-color: black;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  height: 200px;
+  width: 200px;
+}
+
 /*# sourceMappingURL=container.css.map */
