--- a/src/public/css/index/index.css
+++ b/src/public/css/index/index.css
@@ -45,6 +45,24 @@ a:hover {
   height: 100%;
 }
 
+#loader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 1px;
+  right: 1px;
+  opacity: 50%;
+  background-color: black;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  height: 200px;
+  width: 200px;
+}
+
 div.manual {
   width: auto;
 }
