--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -3,9 +3,9 @@
   height: 100%;
   background-color: #333;
   position: fixed;
-  left: 5%;
+  left: 0px;
   top: 0px;
-  width: 100%;
+  width: 400px;
 }
 
 .nav-link {
