--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,25 +8,55 @@
     <title>Workbook</title>
 
     <link rel="stylesheet" href="/css/index/index.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/dragscroll/dragscroll.min.js"></script>
+    <script src="./js/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </head>
 
 <body class="dragscroll">
 
     <div id="loader">
-            <img class="loader" src="/images/loader2.gif" alt="load">
+        <img class="loader" src="/images/loader2.gif" alt="load">
     </div>
+
+    <div id="toggle" onclick="changeMenu(false)"></div>
+
+
+    <div id='my-modal' style="display: none" onclick="changeMenu(true)"></div>
+
+
+    <nav class="overflow-auto my-nav2">
+        <div class="fz-13" id="home">
+            <a href="#" onclick="home()">Home</a>
+        </div>
+        <div class="accordion h-100" id="aDad">
+            <a class="tree1-item w-100 d-block fz-13" href="#" id="chSumario" data-toggle="collapse"
+                data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">Sumario</a>
+
+            <div class="collapse hide" id="collapse1" aria-labelledby="chSumario" data-parent="#aDad">
+                <a class="tree2-item w-100 d-block fz-12" href="#intro" onclick="changeMenu(true)">Introdução</a>
+            </div>
+
+
+            <a class="tree1-item w-100 d-block fz-13" href="#" id="chError" data-toggle="collapse"
+                data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">Mensagens de erros</a>
+            <div class="collapse hide" id="collapse2" aria-labelledby="chError" data-parent="#aDad">
+                <a class="tree2-item w-100 d-block fz-12" href="#intro" onclick="changeMenu(true)">Acesso Negado</a>
+            </div>
+
+    </nav>
 
     <div class="container-menu">
         <aside class="menuItens">
-            <div>Selecione o equipamento</div>
             <a class="menuItem" href="#" onclick="loadHTML('_obdmap.html')">Obdmap One</a>
             <a class="menuItem" href="#" onclick="loadHTML('_service.html')">Obdmap Service</a>
             <a class="menuItem" href="#" onclick="loadHTML('_connect.html')">Obdmap Connect</a>
         </aside>
-        <div class="manual" id="manual">
-            
+
+        <div class="manual" id="manual" onclick="changeMenu(true)">
+
         </div>
     </div>
 
@@ -61,18 +91,19 @@
     let s = ''; //usado para auxialiar as ancoras
     let nav; //usado na navegação pelas ancoras
 
+
     function loadHTML(fileName) {
-        try{
+        try {
             event.preventDefault();
-        } catch (err){
+        } catch (err) {
             console.log('event não suportado!');
-        }    
+        }
 
         $.ajax({
             url: `./html/${fileName}`,
             cache: false,
             beforeSend: () => {
-                $('#manual').html('loading...');
+                $('#manual').html('');
                 $('#loader').css('display', 'flex');
             },
             success: (html => {
@@ -80,14 +111,41 @@
                     .html(html)
                     .animate({ 'opacity': '1' }, 1000);
             }),
-            complete: ( s => {
+            complete: (s => {
                 console.log(s);
                 $('#loader').css('display', 'none');
             })
-            
+
         });
     }
 
+
+    function itemMenuClick(fileName) {
+        changeMenu(true);
+        loadHTML(fileName);
+    }
+
+    function home() {
+        $('aside.menuItens').css('display', 'block');
+        $('#manual').html('');
+        $('#toggle').css('display', 'none');
+        $('.my-nav2').css('display', 'none');
+        $('#my-modal').css('display', 'none');
+    }
+
+    function changeMenu(toggle) {
+        if (toggle) {
+            $('#toggle').css('display', 'block');
+            $('aside.menuItens').css('display', 'none');
+            $('.my-nav2').css('display', 'none');
+            $('#my-modal').css('display', 'none');
+        } else {
+            $('#toggle').css('display', 'none');
+            // $('aside.menuItens').css('display', 'block');
+            $('.my-nav2').css('display', 'block');
+            $('#my-modal').css('display', 'block');
+        }
+    }
 
 </script>
 
