--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,13 +9,16 @@
 
     <link rel="stylesheet" href="/css/index/index.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="/css/fancybox/jquery.fancybox.min.css">
+
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/dragscroll/dragscroll.min.js"></script>
     <script src="./js/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="/js/fancybox/jquery.fancybox.min.js"></script>
 </head>
 
 <body class="dragscroll">
+
 
     <div id="loader">
         <img class="loader" src="/images/loader2.gif" alt="load">
@@ -56,7 +59,7 @@
         </aside>
 
         <div class="manual" id="manual" onclick="changeMenu(true)">
-
+            <!-- <a id="single_image" href="/images/conEquip.png"><img src="/images/conEquipMini.png" alt="" /></a> -->
         </div>
     </div>
 
@@ -146,6 +149,8 @@
             $('#my-modal').css('display', 'block');
         }
     }
+
+
 
 </script>
 
